# fa-control

./: Cargo.toml  README.md  index.js  package.json  pyproject.toml  specs.md
.github/workflows/: CI.yml  lint.yml  publish.yml
__test__/: audio.test.ts
examples/: getters.ts  index.ts  setters.ts
python/: example_usage.py
python/fa_control/: __init__.py
python/tests/: test_fa_control.py
src/: lib.rs  py_interface.rs
src/platform/: linux.rs  mod.rs  windows.rs
