[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name    = "fa-control"
version = "0.1.3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi        = { version = "3.8.2", default-features = true, features = ["napi9", "async"] }
napi-derive = "3.5.1"
once_cell   = "1.19"

# Windows audio control dependencies
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_Media_Audio",
  "Win32_Media_Audio_Endpoints",
  "Win32_System_Com",
  "Win32_UI_Shell_PropertiesSystem",
  "implement",
] }

# Linux audio control dependencies
[target.'cfg(target_os = "linux")'.dependencies]
libpulse-binding = "2.28"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
