[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name    = "fa-control"
version = "0.1.3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
once_cell   = "1.19"
pyo3        = { version = "0.22", features = ["extension-module"], optional = true }

[features]
default = ["pyo3"]

# Windows audio control dependencies
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_Media_Audio",
  "Win32_Media_Audio_Endpoints",
  "Win32_System_Com",
  "Win32_System_ProcessStatus",
  "Win32_System_Threading",
  "Win32_UI_Shell_PropertiesSystem",
  "implement",
] }

# Linux audio control dependencies
[target.'cfg(target_os = "linux")'.dependencies]
libpulse-binding = "2.28"

[profile.release]
lto = true
